@@ -7,6 +7,7 @@ po4a (0.15.4-2) UNRELEASED; urgency=low
     under section 3pm, not 3perl.
   * In debian/rules, remove the useless pods target, 'make -C po' does the
     job.
+  * Make debian/rules much lighter by processing and running Makefile.PL
 
  -- Denis Barbier <barbier@debian.org>  Wed, 26 Nov 2003 20:40:16 +0100
 
